--- a/index.html
+++ b/index.html
@@ -40,23 +40,23 @@
     <footer>
         <div class="testimonial-container">
             <div class="testimonial">
-                <img src="images/Pepe.png" alt="Pepe" class="imagetest">
+                <img src="images/pepe.png" alt="Pepe" class="imagetest">
                 <p class="testimonial-comment">"You wouldnt steal a seed phrase!" - Pepe</p>
             </div>
             <div class="testimonial">
-                <img src="images/Dogwifhat.png" alt="Dogwifhat" class="imagetest">
+                <img src="images/dogwifhat.png" alt="Dogwifhat" class="imagetest">
                 <p class="testimonial-comment">"You wouldnt download a car!" - Dogwifhat</p>
             </div>
             <div class="testimonial">
-                <img src="images/Pnut.png" alt="Pnut" class="imagetest">
+                <img src="images/pnut.png" alt="Pnut" class="imagetest">
                 <p class="testimonial-comment">"You wouldnt edit a meme!" - Pnut</p>
             </div>
             <div class="testimonial">
-                <img src="images/Popcat.png" alt="Popcat" class="imagetest">
+                <img src="images/popcat.png" alt="Popcat" class="imagetest">
                 <p class="testimonial-comment">"You wouldnt rug a meme!" - Popcat</p>
             </div>
             <div class="testimonial">
-                <img src="images/Chillguy.png" alt="Chillguy" class="imagetest">
+                <img src="images/chillguy.png" alt="Chillguy" class="imagetest">
                 <p class="testimonial-comment">"You wouldnt gaslight a KOL!" - Chillguy</p>
             </div>
         </div>
