--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <p class="testimonial-comment">"You wouldnt steal a seed phrase!" - Pepe</p>
             </div>
             <div class="testimonial">
-                <img src="images/dogwifhat.png" alt="Dogwifhat" class="imagetest">
+                <img src="https://github.com/psytrakt/youwouldnt/raw/main/images/Dogwifhat.png" alt="Dog with hat">
                 <p class="testimonial-comment">"You wouldnt download a car!" - Dogwifhat</p>
             </div>
             <div class="testimonial">
