--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <div class="Image1_container">
-        <img src="images/Banner.png" alt="Meme Coin Banner" class="Image1">
+        <img src="https://github.com/Psytrakt/youwouldnt/blob/main/Images/Banner.png?raw=true" alt="Banner Image" class="Image1">
     </div>
 
     <section id="about">
