--- a/index.html
+++ b/index.html
@@ -40,23 +40,24 @@
     <footer>
         <div class="testimonial-container">
             <div class="testimonial">
-                <img src="images/pepe.png" alt="Pepe" class="imagetest">
+                <img src="https://github.com/Psytrakt/youwouldnt/blob/main/Images/pepe.png?raw=true" alt="Pepe Image" class="imagetest">
                 <p class="testimonial-comment">"You wouldnt steal a seed phrase!" - Pepe</p>
             </div>
             <div class="testimonial">
-                <img src="images/dogwifhat.png" alt="Dog with hat">
+                <img src="https://github.com/Psytrakt/youwouldnt/blob/main/Images/dogwifhat.png?raw=true" alt="Dog With Hat Image" class="imagetest">
+
                 <p class="testimonial-comment">"You wouldnt download a car!" - Dogwifhat</p>
             </div>
             <div class="testimonial">
-                <img src="images/pnut.png" alt="Pnut" class="imagetest">
+                <img src="https://github.com/Psytrakt/youwouldnt/blob/main/Images/pnut.png?raw=true" alt="Peanut Image" class="imagetest">
                 <p class="testimonial-comment">"You wouldnt edit a meme!" - Pnut</p>
             </div>
             <div class="testimonial">
-                <img src="images/popcat.png" alt="Popcat" class="imagetest">
+                <img src="https://github.com/Psytrakt/youwouldnt/blob/main/Images/popcat.png?raw=true" alt="Popcat Image" class="imagetest">
                 <p class="testimonial-comment">"You wouldnt rug a meme!" - Popcat</p>
             </div>
             <div class="testimonial">
-                <img src="images/chillguy.png" alt="Chillguy" class="imagetest">
+                <img src="https://github.com/Psytrakt/youwouldnt/blob/main/Images/chillguy.png?raw=true" alt="Chill Guy Image" class="imagetest">
                 <p class="testimonial-comment">"You wouldnt gaslight a KOL!" - Chillguy</p>
             </div>
         </div>
